Minor spacing correction

--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ a:active {
 .container {
   height: auto;
   width: 100%;
-  padding: 44px 44px 132px 44px;
+  padding: 10px 44px 132px 44px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -257,6 +257,9 @@ a:active {
 }
 
 @media only screen and (max-width: 800px) {
+  .profile {
+    padding-bottom: 10px;
+  }
   .profile-img {
     width: 100px;
     height: 100px;
